welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:7: error: type mismatch;
 found   : Unit
 required: Boolean
 if(isAsleep == true) return true;
 ^