welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {

 if(isMorning == true){
 	if (isMom== true) return false;
 	 else return true;
 }
 if(isAsleep == true) return true;
 
       







	
}
